--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "concurrently": "^5.3.0",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "vercel": "^21.0.1"
   },
   "engines": {
     "node": "12"
