--- a/package.json
+++ b/package.json
@@ -3,16 +3,15 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
-    "postinstall": "tsc -b",
-    "predeploy": "remix build && tsc -b",
+    "predeploy": "remix build",
     "deploy": "vercel",
-    "start": "concurrently \"tsc -b -w --preserveWatchOutput\" \"remix run\" \"vercel dev\""
+    "start": "concurrently \"remix run\" \"vercel dev\""
   },
   "dependencies": {
-    "@remix-run/cli": "^0.8.3",
-    "@remix-run/data": "^0.8.3",
-    "@remix-run/react": "^0.8.3",
-    "@remix-run/vercel": "^0.8.3",
+    "@remix-run/cli": "^0.9.1",
+    "@remix-run/data": "^0.9.1",
+    "@remix-run/react": "^0.9.1",
+    "@remix-run/vercel": "^0.9.1",
     "@vercel/node": "1.8.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -24,7 +23,7 @@
     "@types/react-dom": "^17.0.0",
     "concurrently": "^5.3.0",
     "typescript": "^4.1.2",
-    "vercel": "^21.0.1"
+    "vercel": "^21.1.0"
   },
   "engines": {
     "node": "12"
