--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
-    "predeploy": "remix build",
+    "predeploy": "NODE_ENV=production remix build",
     "deploy": "vercel",
     "start": "concurrently \"remix run\" \"vercel dev\""
   },
   "dependencies": {
-    "@remix-run/cli": "^0.10.4",
-    "@remix-run/data": "^0.10.4",
-    "@remix-run/react": "^0.10.4",
-    "@remix-run/vercel": "^0.10.4",
+    "@remix-run/cli": "^0.13.3",
+    "@remix-run/data": "^0.13.3",
+    "@remix-run/react": "^0.13.3",
+    "@remix-run/vercel": "^0.13.3",
     "@vercel/node": "1.8.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -21,7 +21,10 @@
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "autoprefixer": "^10.2.4",
     "concurrently": "^5.3.0",
+    "cssnano": "^4.1.10",
+    "postcss": "^8.2.6",
     "typescript": "^4.1.2",
     "vercel": "^21.2.1"
   },
