--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
-    "predeploy": "NODE_ENV=production remix build",
+    "build": "remix build",
+    "predeploy": "rm -rf ./build && NODE_ENV=production npm run build",
     "deploy": "vercel",
     "start": "concurrently \"remix run\" \"vercel dev\""
   },
   "dependencies": {
-    "@remix-run/cli": "^0.13.3",
-    "@remix-run/data": "^0.13.3",
-    "@remix-run/react": "^0.13.3",
-    "@remix-run/vercel": "^0.13.3",
+    "@remix-run/data": "^0.14.0",
+    "@remix-run/react": "^0.14.0",
+    "@remix-run/vercel": "^0.14.0",
     "@vercel/node": "1.8.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.0.0-beta.0"
   },
   "devDependencies": {
+    "@remix-run/dev": "^0.14.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "autoprefixer": "^10.2.4",
