--- a/vercel.json
+++ b/vercel.json
@@ -6,10 +6,7 @@
     },
     {
       "src": "index.js",
-      "use": "@vercel/node",
-      "config": {
-        "includeFiles": ["remix.config.js", "app-build/**/*", "data-build/**/*"]
-      }
+      "use": "@vercel/node"
     }
   ],
   "rewrites": [
